Fixed overflowing of blockquote.

--- a/src/_sass/_typography.sass
+++ b/src/_sass/_typography.sass
@@ -65,8 +65,8 @@ blockquote
   background-color: darken($lavender, 40%)
   color: $white
   border: 1rem solid darken($lavender, 40%)
-  padding: 0.5rem 1rem
-  width: 100%
+  padding: 0.5rem 5%
+  width: 90%
 
 ul > li
   list-style: square
